--- a/surprise.html
+++ b/surprise.html
@@ -9,7 +9,7 @@
 <body>
     <div class="center">
         <h1>Happy Birthday!</h1>
-        <img src="cake.jpg" alt="Birthday Cake" style="max-width: 90%; height: auto;">
+        <img src="cake.png" alt="Birthday Cake" style="max-width: 90%; height: auto;">
     </div>
     <audio id="birthdaySong" autoplay>
         <source src="happy_birthday.mp3" type="audio/mpeg" />
