--- a/surprise.html
+++ b/surprise.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="center">
-        <h1>Happy Birthday!</h1>
+        <h1>HAPPY BIRTHDAY TO YOU</h1>
         <img src="cake.png" alt="Birthday Cake" style="max-width: 90%; height: auto;">
     </div>
     <audio id="birthdaySong" autoplay>
